# swe-rl-js

./: README.md  pyproject.toml
configs/lab/: swe-js.toml
environments/swe_js/: README.md  pyproject.toml  swe_js.py
environments/swe_js/.prime/: .env-metadata.json
environments/swe_js/outputs/evals/swe-js--anthropic--claude-haiku-4.5/00e33b10/: metadata.json  results.jsonl
environments/swe_js/outputs/evals/swe-js--anthropic--claude-haiku-4.5/69afa864/: metadata.json  results.jsonl
environments/swe_js/outputs/evals/swe-js--anthropic--claude-haiku-4.5/a479db12/: metadata.json  results.jsonl
environments/swe_js/outputs/evals/swe-js--anthropic--claude-haiku-4.5/ae9818a9/: metadata.json  results.jsonl
environments/swe_js/outputs/evals/swe-js--anthropic--claude-haiku-4.5/b1da7b63/: metadata.json  results.jsonl
environments/swe_js/outputs/evals/swe-js--anthropic--claude-haiku-4.5/c4425537/: metadata.json  results.jsonl
environments/swe_js/outputs/evals/swe-js--openai--gpt-4.1-mini/1189aec1/: metadata.json  results.jsonl
environments/swe_js/outputs/evals/swe-js--openai--gpt-4.1-mini/5afa023a/: metadata.json  results.jsonl
environments/test_math/: README.md  pyproject.toml  test_math.py
environments/test_math/outputs/evals/test-math--openai--gpt-4.1-mini/ff503047/: metadata.json  results.jsonl
outputs/evals/alphabet-sort--openai--gpt-4.1-mini/c9b23eb3/: metadata.json  results.jsonl
