[project]
name = "swe-js"
description = "Multi-turn JS bug fixing environment using SWE-smith-js dataset"
tags = ["multi-turn", "code-repair", "javascript", "train"]
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.10",
    "datasets>=3.0.0",
    "prime-sandboxes>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["swe_js.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 3
rollouts_per_example = 1
max_tokens = 4096
